src/App.css
/* Main App */
.header {
  padding-top: 12px;
  background: #fff;
}

.content {
  margin: 24px 16px;
  padding: 20px;
}

.trigger-btn {
  font-size: 16px;
  width: 50px;
  height: 50px;
  position: fixed;
  bottom: 10px;
  left: 10px;


  
}


/* Sider */
.sider {
  height: 100vh;
  position: sticky!important;
  left: 0;
  bottom: 0;
  top: 0;
}

.logo {
  margin: 1rem;

}

.logo img {
  width:150px;
}

.menu-bar {
  display: flex;
  flex-direction: column;
  gap: 10px;
  font-weight: 500;
}

.ant-menu-item-selected {
  background-color: #3D7B84!important;
  color: white!important;
}

.header-icon {
  background: #d2e3c8;
  padding: 8px;
  border-radius: 4px;
  font-size: 15px;
  color: #3D7B84;
  cursor: pointer;

}

/* button and color */
.ant-btn:hover {
color: #3D7B84!important;
border-color: #3D7B84!important;
}

.ant-btn-primary {
  background-color:#3D7B84!important;

}

.ant-btn-primary:hover {
  background-color: #3D7B84!important;
  color: #fff!important;
}

.primary--color {
  color: #3D7B84!important;

}

.primary--light--color {
  color: #3D7B84!important;


}

.secondary-color {
  color: #86a789!important;

}

.light--color {
  color: d2e3c8!important;
}

.gray--color {
  color: rgb(182, 181, 181)!important;
}


/* PLant Lists */
.plant-card {
  flex: 1;
  height: 250px;
  text-align: center;
}

.plant-card Image {
  background-color: white!important;
}

/* Sellers Lists */
.top-seller,
.featured-seller {
flex: 1;
}

.divider {
  border: 2px solid #3D7B84;
  height: 50px;
}

.card {
  background-image: linear-gradient(to bottom, lightgreen, white);
}
/* Banner */
.banner {
  margin: 1rem;
  margin-top: 0;
}
.banner ul {
  display: flex;
  flex-direction: row;
  justify-content: space-be; /* Adds spacing between the list items */
  padding: 0; /* Removes default list padding */
  margin: 0; /* Removes default list margin */
  list-style: none; /* Removes bullet points */
}

.banner li {
  display: flex;
  flex-direction: column;
  align-items: center; /* Centers the content horizontally */
  margin: 1rem; /* Adds spacing between list items */
  text-align: center; /* Centers text content */
}

/* Dashboard  */
.dashboard {
  display: flex;
  width: 100%;
}

.dashboard-one {
  flex: 1;
}

.dashboard-two {
  flex:1;
}

/* Vehicle Table */

/* Deliveries */
.delivery-banner {
display : flex;
flex-direction: row;
}

